(executable
 (package wassail)
 (name main)
 (public_name wassail)
 (modules Main Slicing Slicing_evaluation Utils Cfg Callgraph Generation Analysis)
 (libraries wassail core core_unix core_unix.command_unix wasm.1.1.1)
 ;; (link_flags :standard -cclib -static) ;; uncomment to enable static executable
 (preprocess (pps ppx_jane ppx_compare)))
(include_subdirs unqualified)
