opam-version: "2.0"
name: "wassail"
version: "~dev"
synopsis:
  "Wassail (WebAssembly static analyzer and inspection library) is a toolkit to perform both lightweight and heavyweight static analysis of WebAssembly modules"
maintainer: "Quentin Stiévenart <quentin.stievenart@gmail.com>"
authors: "Quentin Stiévenart <quentin.stievenart@gmail.com>"
license: "MIT"
homepage: "https://github.com/acieroid/wassail"
bug-reports: "https://github.com/acieroid/wassail"
depends: [
  "apron"
  "core"
  "core_kernel"
  "dune" {>= "2.7.0"}
  "ppx_compare"
  "ppx_inline_test"
  "ppx_jane"
  "sexplib"
  "wasm"
  "bisect_ppx" {dev & >= "2.5.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/acieroid/wassail"
url {
  src: "git+https://github.com/acieroid/wassail"
}
