opam-version: "2.0"
name: "wassail"
version: "~dev"
synopsis:
  "Wassail (WebAssembly static analyzer and inspection library) is a toolkit to perform both lightweight and heavyweight static analysis of WebAssembly modules"
maintainer: "Quentin Stiévenart <quentin.stievenart@gmail.com>"
authors: "Quentin Stiévenart <quentin.stievenart@gmail.com>"
license: "GPL-3.0-or-later"
homepage: "https://github.com/acieroid/wassail"
bug-reports: "https://github.com/acieroid/wassail"
depends: [
#  "apron" # LGPL
  "core" {>= "v0.16"} # MIT
  "core_kernel" # MIT
  "dune" {>= "2.7.0"} # MIT
  "ppx_compare" # MIT
  "ppx_inline_test" # MIT
  "ppx_jane" # MIT
  "sexplib" # MIT
  "wasm" # Apache 2.0
  "bisect_ppx" {dev & >= "2.5.0"} # MIT
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/acieroid/wassail"
url {
  src: "git+https://github.com/acieroid/wassail"
}
