(include_subdirs unqualified)
(library
 (name wassail)
 (public_name wassail)
 (instrumentation (backend bisect_ppx))
 (modules
   Wassail
   Helpers Tree Test Log Unsupported
   Wasm_helpers Analysis_helpers
   Type Binop Unop Memoryop Testop Relop Var Instr Memory_inst Module_inst Func Func_inst Ref_type Segment_mode Elem_segment Data_segment Table Table_inst Convertop Wasm_module Segment Import Limits Memory Global Export
   Basic_block Cfg Cfg_builder Call_graph Codegen Lexical_successor_tree
   Transfer
   Intra Inter
   Prim_value
   Spec Spec_inference Spec_analysis
   Var_prop
   Taint Taint_options Taint_domain Taint_transfer Taint_summary
   Taintcall_domain Taintcall_transfer Taintcall
   Use_def Dominance Control_deps Memory_deps Slicing
   Instruction_counter Sizes
   Maths
   Variable
   Value_set 
   Abstract_store_domain Reduced_interval_congruence Value_set_transfer Value_set_summary
   )
 (libraries core_kernel wasm sexplib)
 (inline_tests (flags)) ;; To include online one test, use -only-test foo.ml:linenumber
 (preprocess (pps ppx_jane ppx_compare ppx_inline_test)))
