(include_subdirs unqualified)
(library
 (name wassail)
 (public_name wassail)
 (instrumentation (backend bisect_ppx))
 (modules
   Wassail
   Helpers Tree Test Log Unsupported
   Wasm_helpers Analysis_helpers
   Type Binop Unop Memoryop Testop Relop Var Instr Memory_inst Module_inst Func Func_inst Ref_type Segment_mode Elem_segment Data_segment Table Table_inst Convertop Wasm_module Segment Import Limits Memory Global Export
   Basic_block Cfg Cfg_builder Icfg Call_graph Codegen Lexical_successor_tree
   Transfer
   Intra Inter
   Prim_value
   Spec_domain Spec_inference Spec_analysis
   Var_prop
   Taint Taint_options Taint_domain Taint_transfer Taint_summary
   Taintcall Taintcall_domain Taintcall_transfer
   Use_def Dominance Control_deps Memory_deps Slicing
   Instruction_counter Sizes
   Maths
   Variable
   Value_set 
   Boolean
   Bitfield
   Congruence
   Interval
   Abstract_store_domain Reduced_interval_congruence Value_set_transfer Value_set_summary Value_set_options
   Value_set_abstraction
   Print_trace
   Global_read_domain Global_read_transfer Global_read_summary Global_read Global_defs
   Global_deps
   )
 (libraries core_kernel wasm sexplib)
 (inline_tests (flags)) ;; To include only one test, specify -only-test foo.ml:linenumber as the flag
 (preprocess (pps ppx_jane ppx_compare ppx_inline_test)))
